@@ -1,0 +1,28 @@
+[buildout]
+extends =
+    http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
+
+parts =
+    test
+
+package-name = collective.geo.settings
+test-eggs =
+
+# avoid timeouts by downloading only from known hosts
+allow-hosts =
+    *.plone.org
+    *.python.org
+    *.zope.org
+    docutils.sourceforge.net
+    effbot.org
+    prdownloads.sourceforge.net
+
+
+[test]
+eggs =
+    ${buildout:package-name} [test]
+    ${buildout:test-eggs}
+
+
+[versions]
+zc.buildout = 1.6.3
